third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/try_from/no_repr.rs
#[derive(derive_more::TryFrom)]
enum Enum {
    Variant
}

fn main() {}
